# f5a-leptos-example

./: Cargo.toml  LICENSE  index.html  justfile  readme.md  tailwind.config.js
src/: lib.rs  main.rs
src/app/: root.rs
src/components/: counter.rs  effect_demo.rs  mod.rs  password.rs  preview.rs  signals_demo.rs  toggler.rs
src/features/auth/: pages.rs
src/features/home/: pages.rs
src/features/users/pages/: mod.rs  user_detail.rs  user_list.rs
src/icons/: mod.rs
src/layouts/: mod.rs  navbar.rs  principal.rs  sidebar.rs
src/pages/: not_found.rs
