[package]
name = "f5a_leptos"
version = "0.1.0"
edition = "2024"

[dependencies]
leptos = { version = "0.8.19", features = ["csr"] }
leptos-use = { version = "0.18.3", features = ["use_color_mode"] }
leptos_meta = { version = "0.8.6" }
leptos_router = { version = "0.8.12" }
console_error_panic_hook = "0.1.7"
